tests/tests/core/snapshots/main__core__action_tests__score_overlord_card.snap
---
source: tests/tests/core/action_tests.rs
assertion_line: 326
expression: "Summary::run(&response)"
---

command_list: 
    UpdateGameView: 
        user: 
            side: Overlord
            player_info: 
            valid_rooms_to_visit: RoomA
            mana: 7
            action_tracker: 1
            score: 0
            can_take_action: true
        opponent: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: 
            mana: 999
            action_tracker: 0
            score: 0
            can_take_action: false
        raid_active: false
        game_object_positions: 
            user_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: User }
            opponent_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: Opponent }
            user_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: User }
            opponent_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: Opponent }
            user_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: User }
            opponent_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: Opponent }
    cards: 
        card_id: O44
        revealed_to_viewer: true
        is_face_up: false
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "10"
            arena_icon: "2"
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Scheme 3_10"
            rules_text: "<RulesText>"
            targeting: 
            valid_rooms: 
            on_release_position: 
                sorting_key: 101
                position: ObjectPositionRoom { room_id: Unspecified, room_location: Back }
    UpdateGameView: 
        user: 
            side: Overlord
            player_info: 
            valid_rooms_to_visit: 
            mana: 7
            action_tracker: 1
            score: 0
            can_take_action: true
        opponent: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: 
            mana: 999
            action_tracker: 0
            score: 0
            can_take_action: false
        raid_active: false
        game_object_positions: 
            user_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: User }
            opponent_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: Opponent }
            user_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: User }
            opponent_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: Opponent }
            user_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: User }
            opponent_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: Opponent }
    cards: 
        card_id: O44
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "10"
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Scheme 3_10"
            rules_text: "<RulesText>"
            targeting: 
            valid_rooms: 
            on_release_position: 
                sorting_key: 101
                position: ObjectPositionRoom { room_id: Unspecified, room_location: Back }
    SetMusic: 
        music_state: Silent
    PlaySound: 
        sound: "<AudioClipAddress>"
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O44
        duration: 700
        sound: "<AudioClipAddress>"
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O44
        duration: 300
        sound: "<AudioClipAddress>"
    Delay: 1000
    UpdateGameView: 
        user: 
            side: Overlord
            player_info: 
            valid_rooms_to_visit: 
            mana: 7
            action_tracker: 1
            score: 10
            can_take_action: true
        opponent: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: 
            mana: 999
            action_tracker: 0
            score: 0
            can_take_action: false
        raid_active: false
        game_object_positions: 
            user_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: User }
            opponent_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: Opponent }
            user_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: User }
            opponent_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: Opponent }
            user_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: User }
            opponent_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: Opponent }
    cards: 
        card_id: O44
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "10"
        arena_frame: "<SpriteAddress>"
        owning_player: User
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Scheme 3_10"
            rules_text: "<RulesText>"
            targeting: 
            valid_rooms: 
            on_release_position: 
                sorting_key: 101
                position: ObjectPositionRoom { room_id: Unspecified, room_location: Back }
channel_response: 
    UpdateGameView: 
        user: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: 
            mana: 999
            action_tracker: 0
            score: 0
            can_take_action: false
        opponent: 
            side: Overlord
            player_info: 
            valid_rooms_to_visit: RoomA
            mana: 7
            action_tracker: 1
            score: 0
            can_take_action: true
        raid_active: false
        game_object_positions: 
            user_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: User }
            opponent_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: Opponent }
            user_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: User }
            opponent_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: Opponent }
            user_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: User }
            opponent_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: Opponent }
    cards: 
        card_id: O44
        revealed_to_viewer: false
        is_face_up: false
        card_icons: 
            arena_icon: "2"
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
    VisitRoom: 
        initiator: Opponent
        room_id: RoomA
        visit_type: LevelUpRoom
    UpdateGameView: 
        user: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: 
            mana: 999
            action_tracker: 0
            score: 0
            can_take_action: false
        opponent: 
            side: Overlord
            player_info: 
            valid_rooms_to_visit: 
            mana: 7
            action_tracker: 1
            score: 0
            can_take_action: true
        raid_active: false
        game_object_positions: 
            user_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: User }
            opponent_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: Opponent }
            user_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: User }
            opponent_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: Opponent }
            user_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: User }
            opponent_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: Opponent }
    cards: 
        card_id: O44
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "10"
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Scheme 3_10"
            rules_text: "<RulesText>"
            targeting: 
            valid_rooms: 
            on_release_position: 
                sorting_key: 101
                position: ObjectPositionRoom { room_id: Unspecified, room_location: Back }
    SetMusic: 
        music_state: Silent
    PlaySound: 
        sound: "<AudioClipAddress>"
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O44
        duration: 700
        sound: "<AudioClipAddress>"
    PlayEffect: 
        effect: "<EffectAddress>"
        position: O44
        duration: 300
        sound: "<AudioClipAddress>"
    Delay: 1000
    UpdateGameView: 
        user: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: 
            mana: 999
            action_tracker: 0
            score: 0
            can_take_action: false
        opponent: 
            side: Overlord
            player_info: 
            valid_rooms_to_visit: 
            mana: 7
            action_tracker: 1
            score: 10
            can_take_action: true
        raid_active: false
        game_object_positions: 
            user_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: User }
            opponent_deck: 
                sorting_key: 1
                position: ObjectPositionDeckContainer { owner: Opponent }
            user_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: User }
            opponent_character: 
                sorting_key: 1
                position: ObjectPositionCharacterContainer { owner: Opponent }
            user_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: User }
            opponent_discard: 
                sorting_key: 1
                position: ObjectPositionDiscardPileContainer { owner: Opponent }
    cards: 
        card_id: O44
        revealed_to_viewer: true
        is_face_up: true
        card_icons: 
            top_left_icon: "3"
            bottom_right_icon: "10"
        arena_frame: "<SpriteAddress>"
        owning_player: Opponent
        revealed_card: 
            card_frame: "<SpriteAddress>"
            title_background: "<SpriteAddress>"
            jewel: "<SpriteAddress>"
            image: "<SpriteAddress>"
            title: "Test Scheme 3_10"
            rules_text: "<RulesText>"
            targeting: 
            valid_rooms: 
            on_release_position: 
                sorting_key: 101
                position: ObjectPositionRoom { room_id: Unspecified, room_location: Back }
